Keyboard and grid no longer overlap + Letters can be deleted from tiles

--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -7,8 +7,8 @@
 /* css for keyboard */
 .keyboard {
   height: 200px;
-  position: fixed;
-  bottom: 50px;
+  position: relative;
+  bottom: 0px;
   align-self: center;
   width: 60%;
   padding: 5px 0;
